<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/proB_01"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="10"
        android:secondaryProgress="50" />

    <ProgressBar
        android:id="@+id/proB_02"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_DecF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/btn_DecF_title" />

        <Button
            android:id="@+id/btn_IncF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/btn_IncF_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_DecS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/btn_DecS_title" />

        <Button
            android:id="@+id/btn_IncS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/btn_IncS_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/proBCircle"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/btn_Start_title" />

        <Button
            android:id="@+id/btn_Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="@string/btn_Stop_title" />
    </LinearLayout>

</LinearLayout>